# gloam

./: CHANGELOG.md  README.md  gloam.sh  plan.md  plasma-daynight-sync.sh  plasma-theme-watcher.sh  twilight.sh
.github/workflows/: release.yml
patches/: plasma-workspace-no-theme-on-schedule-refresh.patch
patches/plasma-workspace-autoswitcher/: CMakeLists.txt
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
